# scattercc

./: .gitignore  .overcommit.yml  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
.git-hooks/pre_commit/: cpp_header_include_once_guard.rb
ci/linux/: build.sh
ci/windows/: build.bat
cmake/: Common.cmake  ImportedTarget.cmake  Predef.cmake  TryCompile.cmake
cmake/common/: Predef.cmake  Workaround.cmake
cmake/try_compile/: CMakeLists.txt  gmtime.cpp  gmtime_r.cpp  gmtime_s.cpp  localtime.cpp  localtime_r.cpp  localtime_s.cpp
develop/ci/: generate-travis-yml.py  local_run_linux.sh
develop/vssln/: infra.vcxitems  infra.vcxitems.filters  scattercc.sln  scattercc.vcxproj  scattercc.vcxproj.filters
develop/vssln/infra/: infra.vcxitems  infra.vcxitems.filters
develop/vssln/scattercc/: scattercc.vcxproj  scattercc.vcxproj.filters
develop/vssln/scatterccd/: scatterccd.vcxproj  scatterccd.vcxproj.filters
infra/: CMakeLists.txt  infra.cpp  infra.h
infra/basic/: assertion.h  basic_math.h  datetime.h  integer_to_string.h  logging.h  printf.h  string.h
infra/compat/: gmtime.h  localtime.h
infra/infra/: ide.h  maybe_unused.h
infra/linux/: target.h
infra/mswin/: mswin.h  target.h
infra/posix_base/: target.h
infra/predef/: ide.h  macro.h  maybe_unused.h  static_assert.h  types.h
infra/warnings/conditional_expression_is_constant/: disable.h  restore.h
infra/warnings/integral_overflow/: disable.h  restore.h
src/: CMakeLists.txt  scattercc.cpp  scatterccd.cpp
test/: CMakeLists.txt
test/infra/: main.cpp  test_assertion.cpp  test_integer_to_string.cpp  test_string.cpp  test_types.cpp
